[package]
name = "clicksign"
version = "0.2.4"
authors = ["SOLARIS GESTÃO DE RECURSOS <solcap.com.br>"]
edition = "2018"
homepage = "https://github.com/solaris-capital/clicksign-rs"
license-file = "LICENSE.md"
description = "Unofficial Rust library for the Clicksign API"
documentation = "https://docs.rs/clicksign/0.2.4/clicksign/"
repository = "https://github.com/solaris-capital/clicksign-rs"
categories = [
  "Assinatura Eletrônica", "Clicksign", "e-Signature", "Eletronic Signature"
]


[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
error-chain = { version = "0.12.4", default-features = false }
